ensure we don't keep old session config keys

same behaviour as for the view
BUG: 486648